NEW: rebind API and kcli subcommand
refs: https://github.com/KumoCorp/kumomta/issues/209
