# crates/kumod/src/http_server/mod.rs
@@ -1,6 +1,7 @@
 use axum::routing::{delete, get, post};
 use axum::Router;
 use inject_v1::*;
+use kumo_api_types::rebind::*;
 use kumo_api_types::*;
 use kumo_server_common::http_server::RouterAndDocs;
 use spool::SpoolId;
@@ -8,6 +9,7 @@ use utoipa::OpenApi;
 
 pub mod admin_bounce_v1;
 pub mod admin_inspect_message;
+pub mod admin_rebind_v1;
 pub mod admin_suspend_ready_q_v1;
 pub mod admin_suspend_v1;
 pub mod admin_trace_smtp_server_v1;
@@ -22,6 +24,7 @@ pub mod inject_v1;
         admin_bounce_v1::bounce_v1_list,
         admin_bounce_v1::bounce_v1_delete,
         admin_inspect_message::inspect_v1,
+        admin_rebind_v1::rebind_v1,
         admin_suspend_ready_q_v1::suspend,
         admin_suspend_ready_q_v1::list,
         admin_suspend_ready_q_v1::delete,
@@ -45,6 +48,8 @@ pub mod inject_v1;
             BounceV1CancelRequest,
             InspectMessageV1Response,
             MessageInformation,
+            RebindV1Request,
+            RebindV1Response,
             SuspendReadyQueueV1Request,
             SuspendV1Response,
             SuspendReadyQueueV1ListEntry,
@@ -67,6 +72,7 @@ pub fn make_router() -> RouterAndDocs {
                 "/api/admin/bounce/v1",
                 delete(admin_bounce_v1::bounce_v1_delete),
             )
+            .route("/api/admin/rebind/v1", post(admin_rebind_v1::rebind_v1))
             .route("/api/admin/suspend/v1", post(admin_suspend_v1::suspend))
             .route("/api/admin/suspend/v1", get(admin_suspend_v1::list))
             .route("/api/admin/suspend/v1", delete(admin_suspend_v1::delete))
